Bug fixing : Image loader z-index

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -32,6 +32,7 @@
       width: auto;
       height: auto;
       position: relative;
+      z-index: 5;
     }
     &:before {
       content: "";
